[package]
name = "libp2p-udp"
edition = "2018"
description = "UDP/IP transport protocol for libp2p"
version = "0.1.0"
authors = ["Age Manning <Age@AgeManning.com>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
libp2p-core = { version = "0.7.0", path = "../../core" }
log = "0.4.1"
futures = "0.1"
multiaddr = { package = "parity-multiaddr", version = "0.4.0", path = "../../misc/multiaddr" }
tk-listen = "0.2.0"
tokio-io = "0.1"
tokio-udp = "0.1.3"

[dev-dependencies]
tokio = "0.1"
